Updated dockerfile to use python 3.14 in base image, fixed pandas warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "pandas==2.3",
     "plotly==6.2", 
     "requests==2.32",
-    "scipy==1.16",
+    "scipy~=1.16.3",
     "waitress==3.0",
 ]
 
